samples/_failures_safe/1761426739_d9cd43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6378cd0f.c: In function ‘main’:
./samples/SAFE/__tmp_6378cd0f.c:138:17: error: expected expression at end of input
  138 |                 if (entries[i].level ==
      |                 ^~
./samples/SAFE/__tmp_6378cd0f.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6378cd0f.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6378cd0f.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6378cd0f.c:138:17: error: expected declaration or statement at end of input
